// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assert > todo 1`] = `
{
  "data": [
    "Learn Python",
    "Learn Rust",
    "Learn AI",
  ],
  "errors": [],
  "language": "en",
}
`;

exports[`assert > todo obj 1`] = `
{
  "data": [
    {
      "checked": false,
      "text": "Learn Python",
    },
    {
      "checked": false,
      "text": "Learn Rust",
    },
    {
      "checked": false,
      "text": "Learn AI",
    },
  ],
  "errors": [],
  "language": "en",
}
`;
